cmake_minimum_required(VERSION 3.0)
project(MemPool)
set(HOME ${PROJECT_SOURCE_DIR})
message(STATUS "HOME PATH: ${HOME}")
set(SRC ${HOME}/src)
set(INCL ${HOME}/include)
set(EXECUTABLE_OUTPUT_PATH ${HOME}/bin)
file(GLOB SRC_LIST ${SRC}/*.c)
include_directories(${INCL})
add_executable(mempool ${SRC_LIST})
