cmake_minimum_required(VERSION 3.0)
project(MySQLConnectionPool)
set(HOME /home/cdz/MySQLConnectionPool)
set(INCLU ${HOME}/include)
set(SRC ${HOME}/src)
set(BIN ${HOME}/bin)
include_directories(${INCLU})
file(GLOB SRC_LIST ${SRC}/*cpp ${SRC}/*c)
message(STATUS "${SRC_LIST}")
set(EXECUTABLE_OUTPUT_PATH ${BIN})
add_definitions(-DTEST1)
add_executable(mysqlConnectionPool ${SRC_LIST})
target_link_libraries(mysqlConnectionPool m mysqlclient)
