cmake_minimum_required(VERSION 3.0)
project(TinyWebServer)
set(HOME ${PROJECT_SOURCE_DIR})
set(SRC ${HOME}/src)
set(INCLU ${HOME}/include)
set(BIN ${HOME}/bin)
set(EXECUTABLE_OUTPUT_PATH ${BIN})
file(GLOB SRC_LIST ${SRC}/*cpp ${SRC}/*.hpp)
include_directories(${INCLU} ${SRC})
add_executable(TinyWebServer ${SRC_LIST})
target_link_libraries(TinyWebServer pthread mysqlclient)
